--- a/src/index.css
+++ b/src/index.css
@@ -14,4 +14,19 @@ code {
 .form-container{
   display:flex;
   flex-direction:column;
+  align-items:center;
+  padding:2%;
+}
+a{
+  width:8%;
+  padding-top:2%;
+}
+.user-card{
+  width:20%;
+  border:2px solid black;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  margin:0 auto;
+  padding:2%;
 }
